--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - db
     volumes:
-      - ./slackbot:/opt/slackbot
+      - ./webapp:/opt/webapp
   db:
     image: postgres:latest
     ports:
