--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -2,3 +2,5 @@ gunicorn>=19.9.0
 Flask>=1.0.2
 slackclient>=1.3.0
 slackeventsapi>=2.1.0
+spacy>=2.0.18
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.0.0/en_core_web_sm-2.0.0.tar.gz
