Add initial wumpus code

--- a/heroku.yml
+++ b/heroku.yml
@@ -1,3 +1,10 @@
+setup:
+  addons:
+  - plan: heroku-postgresql
+    as: DATABASE
+  config:
+    PYTHONUNBUFFERED: True
+
 build:
   docker:
     web: Dockerfile
